--- a/Resume/index.html
+++ b/Resume/index.html
@@ -17,97 +17,96 @@
         <div class="main-content">
             <!--about user-->
             <div class="about">
-                <h2 class="about-position">Front-End Developer</h2>
-                <h1 class="about-name">Nadiia Mazur</h1>
-                <p class="about-discription">Hello. I am just starting my way in IT, but I have a great desire to develop in this direction. I have experience with
+                <h2 class="about__position">Front-End Developer</h2>
+                <h1 class="about__name">Nadiia Mazur</h1>
+                <p class="about__discription">Hello. I am just starting my way in IT, but I have a great desire to develop in this direction. I have experience with
                 JavaScript, HTML5 and CSS3. I continue to develop and learn new things in development.</p>
             </div>
-            
             <!--Work-->
             <div class="work">
-                <h3 class="title">Work Experience</h3>
+                <h3 class="main-content__title">Work Experience</h3>
                 <!--Company 1-->
                 <div>
-                    <h4 class="work-position">Front-End Developer <span class="organization">Freelance</span></h4>
+                    <h4 class="work__position">Front-End Developer <span class="organization">Freelance</span></h4>
                     <p class="period">August 2022 - up to now</p>
-                    <ul class="work-list">
-                        <li class="work-list-item">Training projects</li>
+                    <ul class="work__list">
+                        <li class="work__list-item">Training projects</li>
                     </ul>
                 </div>
                 <!--Company 2-->
                 <div>
-                    <h4 class="work-position">Analyst <span class="organization">PrykarpatskyTorgovyDim</span></h4>
+                    <h4 class="work__position">Analyst <span class="organization">PrykarpatskyTorgovyDim</span></h4>
                     <p class="period">February 2020 - December 2022</p>
-                    <ul class="work-list">
-                        <li class="work-list-item">Sales analysis.</li>
-                        <li class="work-list-item">Providing data for sales planning.</li>
-                        <li class="work-list-item">Summary and analysis of costs, profitability and sales efficiency.</li>
+                    <ul class="work__list">
+                        <li class="work__list-item">Sales analysis.</li>
+                        <li class="work__list-item">Providing data for sales planning.</li>
+                        <li class="work__list-item">Summary and analysis of costs, profitability and sales efficiency.</li>
                     </ul>
                 </div>
                 <!--Company 3-->
                 <div>
-                    <h4 class="work-position">Analyst <span class="organization">Ukrposhta</span></h4>
+                    <h4 class="work__position">Analyst <span class="organization">Ukrposhta</span></h4>
                     <p class="period">February 2018 - January 2019</p>
-                    <ul class="work-list">
-                        <li class="work-list-item">Data collection.</li>
-                        <li class="work-list-item">Data consolidation and analysis.</li>
-                        <li class="work-list-item">Reporting to the head office.</li>
+                    <ul class="work__list">
+                        <li class="work__list-item">Data collection.</li>
+                        <li class="work__list-item">Data consolidation and analysis.</li>
+                        <li class="work__list-item">Reporting to the head office.</li>
                     </ul>
                 </div>
                 <!--Company 4-->
                 <div>
-                    <h4 class="work-position">Operator <span class="organization">Plastic Card Enterprise Ltd</span></h4>
+                    <h4 class="work__position">Operator <span class="organization">Plastic Card Enterprise Ltd</span></h4>
                     <p class="period">August 2011 - December 2017</p>
-                    <ul class="work-list">
-                        <li class="work-list-item">Personalization of plastic cards.</li>
-                        <li class="work-list-item">Product quality control.</li>
-                        <li class="work-list-item">Application of color photo printing to the card.</li>
+                    <ul class="work__list">
+                        <li class="work__list-item">Personalization of plastic cards.</li>
+                        <li class="work__list-item">Product quality control.</li>
+                        <li class="work__list-item">Application of color photo printing to the card.</li>
                     </ul>
                 </div>
             </div>
             <!--Education-->
             <div class="education">
-                <h3 class="title">Education</h3>
-                <h4 class="education-university">Kyiv National University of Trade and Economics</h4>
-                <h4 class="education-position">Accounting and audit</h4>
+                <h3 class="main-content__title">Education</h3>
+                <h4 class="education__university">Kyiv National University of Trade and Economics</h4>
+                <h4 class="education__position">Accounting and audit</h4>
                 <p class="period">September 2011 - January 2017</p>
             </div>
         </div>
         <!--Sidebar div or aside-->
         <aside class="sidebar">
-            <img src="img/photo.jpg" alt="user photo" class="photo">
+            <img src="img/photo.jpg" alt="user photo" class="sidebar__photo">
             <!--Contacts-->
             <div class="contacts">
-                <h3 class="sidebar-title">Contacts</h3>
+                <h3 class="sidebar__title">Contacts</h3>
                 <div>
                     <p>
-                        <span class="contact-type">C:</span>
-                        <a href="tel:+380951220410" class="contact-link">+38 095 122 04 10</a>
+                        <span class="contact__type">C:</span>
+                        <a href="tel:+380951220410" class="contact__link">+38 095 122 04 10</a>
                     </p>
                     <p>
-                        <span class="contact-type">E:</span>
-                        <a href="mailto:nadiiamazur5@gmail.com" class="contact-link">nadiiamazur5@gmail.com</a>
+                        <span class="contact__type">E:</span>
+                        <a href="mailto:nadiiamazur5@gmail.com" class="contact__link">nadiiamazur5@gmail.com</a>
                     </p>
                 </div>
             </div>
             <!--Tech Skills-->
             <div class="tech-skills">
-                <h3 class="sidebar-title">Tech Skills</h3>
-                <ul class="tech-skills-list">
-                    <li class="tech-skills-item"> <span class="tech-skills-text">HTML5</span> </li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">CSS3</span></li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">GIT</span></li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">JavaScript</span></li>
+                <h3 class="sidebar__title">Tech Skills</h3>
+                <ul class="tech-skills__list">
+                    <li class="tech-skills__list-item"> <span class="tech-skills__text">HTML5</span> </li>
+                    <li class="tech-skills__list-item"> <span class="tech-skills__text">CSS3</span></li>
+                    <li class="tech-skills__list-item"> <span class="tech-skills__text">GIT</span></li>
+                    <li class="tech-skills__list-item"> <span class="tech-skills__text">JavaScript</span></li>
                 </ul>
             </div>
             <!--Soft Skills-->
             <div class="soft-skills">
-                <h3 class="sidebar-title">Soft Skills</h3>
-                <ul class="soft-skills-list">
-                    <li class="soft-skills-item"> <span class="soft-skills-text">Time Management</span></li>
-                    <li class="soft-skills-item"> <span class="soft-skills-text">Communication</span></li>
-                    <li class="soft-skills-item"> <span class="soft-skills-text">Attention to Detail</span></li>
-                    <li class="soft-skills-item"> <span class="soft-skills-text">Teamwork</span></li>
+                <h3 class="sidebar__title">Soft Skills</h3>
+                <ul class="soft-skills__list">
+                    <li class="soft-skills__list-item"> <span class="soft-skills__text">Time Management</span></li>
+                    <li class="soft-skills__list-item"> <span class="soft-skills__text">Communication</span></li>
+                    <li class="soft-skills__list-item"> <span class="soft-skills__text">Attention to Detail</span></li>
+                    <li class="soft-skills__list-item"> <span class="soft-skills__text">Teamwork</span></li>
                 </ul>
             </div>
         </aside>
