--- a/Resume/index.html
+++ b/Resume/index.html
@@ -24,7 +24,7 @@
             </div>
             <!--Work-->
             <div class="work">
-                <h3 class="main-content__title">Work Experience</h3>
+                <h3 class="work__title">Work Experience</h3>
                 <!--Company 1-->
                 <div>
                     <h4 class="work__position">Front-End Developer <span class="organization">Freelance</span></h4>
@@ -66,7 +66,7 @@
             </div>
             <!--Education-->
             <div class="education">
-                <h3 class="main-content__title">Education</h3>
+                <h3 class="education__title">Education</h3>
                 <h4 class="education__university">Kyiv National University of Trade and Economics</h4>
                 <h4 class="education__position">Accounting and audit</h4>
                 <p class="period">September 2011 - January 2017</p>
@@ -77,7 +77,7 @@
             <img src="img/photo.jpg" alt="user photo" class="sidebar__photo">
             <!--Contacts-->
             <div class="contacts">
-                <h3 class="sidebar__title">Contacts</h3>
+                <h3 class="contacts__title">Contacts</h3>
                 <div>
                     <p>
                         <span class="contact__type">C:</span>
@@ -91,7 +91,7 @@
             </div>
             <!--Tech Skills-->
             <div class="tech-skills">
-                <h3 class="sidebar__title">Tech Skills</h3>
+                <h3 class="tech-skills__title">Tech Skills</h3>
                 <ul class="tech-skills__list">
                     <li class="tech-skills__list-item"> <span class="tech-skills__text">HTML5</span> </li>
                     <li class="tech-skills__list-item"> <span class="tech-skills__text">CSS3</span></li>
@@ -101,7 +101,7 @@
             </div>
             <!--Soft Skills-->
             <div class="soft-skills">
-                <h3 class="sidebar__title">Soft Skills</h3>
+                <h3 class="soft-skills__title">Soft Skills</h3>
                 <ul class="soft-skills__list">
                     <li class="soft-skills__list-item"> <span class="soft-skills__text">Time Management</span></li>
                     <li class="soft-skills__list-item"> <span class="soft-skills__text">Communication</span></li>
