--- a/Resume/index.html
+++ b/Resume/index.html
@@ -27,16 +27,16 @@
                 <h3 class="work__title">Work Experience</h3>
                 <!--Company 1-->
                 <div>
-                    <h4 class="work__position">Front-End Developer <span class="organization">Freelance</span></h4>
-                    <p class="period">August 2022 - up to now</p>
+                    <h4 class="work__position">Front-End Developer <span class="work__organization">Freelance</span></h4>
+                    <p class="work__period">August 2022 - up to now</p>
                     <ul class="work__list">
                         <li class="work__list-item">Training projects</li>
                     </ul>
                 </div>
                 <!--Company 2-->
                 <div>
-                    <h4 class="work__position">Analyst <span class="organization">PrykarpatskyTorgovyDim</span></h4>
-                    <p class="period">February 2020 - December 2022</p>
+                    <h4 class="work__position">Analyst <span class="work__organization">PrykarpatskyTorgovyDim</span></h4>
+                    <p class="work__period">February 2020 - December 2022</p>
                     <ul class="work__list">
                         <li class="work__list-item">Sales analysis.</li>
                         <li class="work__list-item">Providing data for sales planning.</li>
@@ -45,8 +45,8 @@
                 </div>
                 <!--Company 3-->
                 <div>
-                    <h4 class="work__position">Analyst <span class="organization">Ukrposhta</span></h4>
-                    <p class="period">February 2018 - January 2019</p>
+                    <h4 class="work__position">Analyst <span class="work__organization">Ukrposhta</span></h4>
+                    <p class="work__period">February 2018 - January 2019</p>
                     <ul class="work__list">
                         <li class="work__list-item">Data collection.</li>
                         <li class="work__list-item">Data consolidation and analysis.</li>
@@ -55,8 +55,8 @@
                 </div>
                 <!--Company 4-->
                 <div>
-                    <h4 class="work__position">Operator <span class="organization">Plastic Card Enterprise Ltd</span></h4>
-                    <p class="period">August 2011 - December 2017</p>
+                    <h4 class="work__position">Operator <span class="work__organization">Plastic Card Enterprise Ltd</span></h4>
+                    <p class="work__period">August 2011 - December 2017</p>
                     <ul class="work__list">
                         <li class="work__list-item">Personalization of plastic cards.</li>
                         <li class="work__list-item">Product quality control.</li>
@@ -69,7 +69,7 @@
                 <h3 class="education__title">Education</h3>
                 <h4 class="education__university">Kyiv National University of Trade and Economics</h4>
                 <h4 class="education__position">Accounting and audit</h4>
-                <p class="period">September 2011 - January 2017</p>
+                <p class="education__period">September 2011 - January 2017</p>
             </div>
         </div>
         <!--Sidebar div or aside-->
